Hendricks parser experiment with one single test

--- a/specs/1.0.md
+++ b/specs/1.0.md
@@ -28,9 +28,9 @@ Field Name | Type | Description
 ---|:---:|---
 <a name="hVersion"></a>x-hendricks | `string` | **Required.** Specifies the Hendricks Specification version being used. The value MUST be `"1.0"`.
 
-#### <a name="operationObject"></a>Operation Object
+#### <a name="responseObject"></a>Response Object
 
-This extends the [base Operation Object](https://github.com/OAI/OpenAPI-Specification/blob/OpenAPI.next/versions/2.0.md#operation-object).
+This extends the [base Response Object](https://github.com/OAI/OpenAPI-Specification/blob/OpenAPI.next/versions/2.0.md#response-object).
 
 ##### Fixed Fields
 
